# mcp-core

./: Cargo.toml  LICENSE  README.md  REUSE.toml  build.rs
.github/workflows/: ci.yml
examples/mcp-ui-demo/: Cargo.toml
examples/mcp-ui-demo/src/: main.rs
examples/mcp-ui-demo/web/: components.js  echo-detail.js  items-list.js
src/: cli.rs  lib.rs  testing.rs
src/auth/: middleware.rs  mod.rs
src/bootstrap/: mod.rs  tracing_init.rs
src/config/: base.rs  mod.rs  safe_path.rs  token.rs
src/transport/: mod.rs  sse.rs  streamable_http.rs
src/web/: landing.rs  landing.scss  mod.rs  session.rs
web/: playwright.config.ts
web/e2e/shell/: catalog.spec.ts  helpers.ts  operations.spec.ts  search.spec.ts
