[package]
name = "mcp-ui-demo"
version = "0.1.0"
edition = "2021"
authors = ["Stefan Grönke <stefan@gronke.net>"]
license = "AGPL-3.0-or-later"
publish = false

[dependencies]
mcp-core = { path = "../..", features = ["web-ui", "streamable-http", "config", "bootstrap", "auth"] }
rmcp = { version = "1.7", features = ["server", "transport-streamable-http-server", "macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
tower-http = { version = "0.6", features = ["fs"] }
axum = "0.8"
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"

[[bin]]
name = "mcp-ui-demo"
path = "src/main.rs"
